--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的網站</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>歡迎來到我的網站</h1>
-    <p>這是我的第一個網站。</p>
-</body>
-</html>
+<nav>
+    <ul>
+      <li><a href="#home">首頁</a></li>
+      <li><a href="#about">開啟你的隱藏技能</a></li>
+      <li><a href="#services">最短時間快速改變</a></li>
+      <li><a href="#portfolio">立即上車,加入我們</a></li>
+      <li><a href="#contact">培育你的新能力，享受全新躍遷人生！</a></li>
+    </ul>
+  </nav>
